--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "vite build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^3.1.0"
   },
   "dependencies": {
-    "gh-pages": "^4.0.0",
     "sass": "^1.55.0"
-  },
-  "homepage": "https://cromofuego.github.io/elkin-web/"
+  }
 }
